tests/paczka1/fuzzy1/36656797.err
Error in line 14: 8fX7vSl9f S498 95,7
Error in line 13: K3Yjs7 A3 24,5
Error in line 21: K3Yjs7 A107 94,7
Error in line 28: 8fX7vSl9f A107 20,6
Error in line 26: K3Yjs7 S748 44,5
Error in line 32: IFLwv3l1LP S748 106,9
Error in line 29: Pd8BX8Di S748 88,2
Error in line 36: Pd8BX8Di S498 8,1
